--- a/screens/contact.css
+++ b/screens/contact.css
@@ -6,15 +6,33 @@ form input{
     display:block;
     border: 1px solid darkgray;
     width: 200px;
-    margin:5px;
+    margin:5px 0;
+    padding:5px
 }
 
 form textarea {
     display:block;
-    margin:5px
+    margin:5px 0;
+    padding:5px;
+}
+
+form button{
+    background-color: #fff;
+    border:1px palevioletred solid;
+    border-radius: 4px;
+    padding:2px 8px;
+    color:palevioletred
+}
+
+form button:focus{
+    outline:none;
+}
+form button:active{
+    opacity: 0.5;
 }
 
 p{
     font-size: 14px;
     font-family: sans-serif;
+    font-weight: bold;
 }
